--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 .navbar-brand,
-.navbar-brand:hover {
+.navbar-brand:hover {1
   color: #EA1C2C !important;
   font-size: 1.5rem !important;
 }
