--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 .navbar-brand,
-.navbar-brand:hover {123456
+.navbar-brand:hover {1234567
   color: #EA1C2C !important;
   font-size: 1.5rem !important;
 }
