--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   font-family: "Nunito", sans-serif;
 }
 
-.navbar-brand,
+.navbar-brand,1
 .navbar-brand:hover {
   color: #EA1C2C !important;
   font-size: 1.5rem !important;
